@@ -4,12 +4,12 @@
 
 <!-- title -->
 <tr>
-	<th colspan="3" class="bottomBorder">IP request form</th>
+	<th colspan="2" class="bottomBorder">IP request form</th>
 </tr>
 
 <!-- select section -->
 <tr>
-	<td>* Select subnet</td>
+	<td>Select subnet *</td>
 	
 	<td>
 		<select name="subnetId" id="subnetId">
@@ -42,7 +42,6 @@
 		</select>
 		
 	</td>
-	<td class="info">(required) Please select subnet</td>
 </tr>
 
  
@@ -59,27 +58,24 @@ $(document).ready(function() {
 </script>
 
 <tr>
-	<td>* IP address</td>
+	<td>IP address *</td>
 	<td>
 		<input type="text" name="ip_addr" class="ip_addr" size="30" value="">
    	</td>
-   	<td class="info">(required) Please enter IP address</td>
 </tr>
 
 <!-- description -->
 <tr>
 	<td>Description</td>
 	<td>
-		<input type="text" name="description" size="30"></td>
-	<td class="info">Description for IP address usage</td>
+		<input type="text" name="description" size="30" placeholder="IP description"></td>
 </tr>
 
 <!-- DNS name -->
 <tr>
-	<td>DNS name</td>
+	<td>Hostname</td>
 	<td>
-		<input type="text" name="dns_name" size="30"></td>
-	<td class="info">device hostname</td>
+		<input type="text" name="dns_name" size="30" placeholder="device hostname"></td>
 </tr>
 
 <!-- owner -->
@@ -87,7 +83,7 @@ $(document).ready(function() {
 	<td>Owner</td>
 	<td>	
 		<!-- autocomplete -->
-		<link type="text/css" href="../css/ui-darkness/jquery-ui-1.8.14.custom.css" rel="Stylesheet" />	
+		<link type="text/css" href="../css/jquery-ui-1.8.14.custom.css" rel="Stylesheet" />	
 		<script type="text/javascript" src="../js/jquery-ui-1.8.14.custom.min.js"></script>
 		<script>
 		$(function() {
@@ -105,26 +101,23 @@ $(document).ready(function() {
 		});
 		</script>
 		
-		<input type="text" name="owner" id="owner" size="30"></td>
-	<td class="info">Person, responsible for IP address</td>
+		<input type="text" name="owner" id="owner" size="30" placeholder="Responsible person"></td>
 </tr>
 
 <!-- requester -->
 <tr>
-	<td>Requester</td>
+	<td>Requester *</td>
 	<td>
-		<input type="text" name="requester" size="30"></textarea>
+		<input type="text" name="requester" size="30" placeholder="You email address"></textarea>
 	</td>
-	<td class="info">Please enter your own email address!</td>
 </tr>
 
 <!-- comment -->
 <tr>
 	<td>Additional<br>comment</td>
 	<td class="comment">
-		<textarea name="comment" rows="2" cols="30"></textarea>
+		<textarea name="comment" rows="2" cols="30" placeholder="If there is anything else you want to say write it in this box!"></textarea>
 	</td>
-	<td class="info">If there is anything else you want to say write it in this box!</td>
 </tr>
 
 <!-- submit -->
@@ -137,7 +130,6 @@ $(document).ready(function() {
 
 <!-- result -->
 <tr>
-	<td></td>
 	<td colspan="2">
 		<div id="requestIPresult"></div>
 	</td>
@@ -145,7 +137,6 @@ $(document).ready(function() {
 
 <!-- back to login page -->
 <tr>
-	<td class="submit"></td>
 	<td class="submit">
 		<a href="#login" class="backToLogin">
 		<div class="backToLogin">
