@@ -10,6 +10,7 @@
 	+ Selectable export fields when exportin subnet;
 	+ Added additional level of subnet nesting;
 	+ Subnet can be deleted from ip address edit subnet;
+	+ IP Requests for locked subnets and viewer users can be placed from ip address list;
 	+ jQuery updated to v 1.7.1;
 	+ HighCharts updated to v 2.2.0;
 
